--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@mui/x-data-grid": "^7.23.3",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
+    "react-cookie": "^7.2.2",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.0",
     "react-router-dom": "^7.0.2",
